# libscad

./: .git_ignore  .gitignore  README.md  meson.build  meson_options.txt
.cache/clangd/index/: obj2d.cpp.0D09AAF58BDF9B1B.idx  obj3d.cpp.801C344765BA2F1B.idx  obj3d.h.8AA11DEC02053671.idx  test_libscad.cpp.63DA082687891F5D.idx
include/scad/: obj2d.h  obj3d.h  scad.h
src/: meson.build  obj2d.cpp  obj3d.cpp  scad.cpp
subprojects/googletest-1.17.0/: .meson-subproject-wrap-hash.txt
tests/: meson.build  test_libscad.cpp
